--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   syncfusion_flutter_xlsio: ^20.1.50-beta
   intl: ^0.17.0
   desktop_window: ^0.4.0
+  top_snackbar_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_native_splash: ^1.1.7+1
