--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   intl: ^0.17.0
   desktop_window: ^0.4.0
   top_snackbar_flutter: ^1.0.2
+  firebase_core: ^1.15.0
+  cloud_firestore: ^3.1.13
 
 dev_dependencies:
   flutter_native_splash: ^1.1.7+1
