--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   top_snackbar_flutter: ^1.0.2
   firebase_core: ^1.15.0
   cloud_firestore: ^3.1.13
+  firebase_auth: ^3.3.16
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_native_splash: ^1.1.7+1
@@ -42,3 +44,6 @@ flutter:
 flutter_native_splash:
   color: "#42a5f5"
   image: web/assets/flutter_logo.png
+
+  assets:
+    - images/
