--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^3.1.13
   firebase_auth: ^3.3.16
   shared_preferences: ^2.0.13
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_native_splash: ^1.1.7+1
