--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build, Release app to Github Pages and Firebase Hosting
+name: Build, Release app to Github Pages
 # name: Test, Build and Release apk
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -15,13 +15,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+    - uses: actions/checkout@v2.4.2
+    - uses: actions/setup-java@v3.2.0
       with:
-        java-version: '12.x'
-    - uses: subosito/flutter-action@v1
+        java-version: '18.x'
+    - uses: subosito/flutter-action@v2.4.0
       with:
-        channel: 'dev'
+        channel: 'stable'
     - name: 'Run flutter pub get'
       run: flutter pub get
 #    - name: 'Run Test(s)'
