--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -15,10 +15,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.4.2
+    - uses: actions/checkout@v2
     - uses: actions/setup-java@v3.2.0
       with:
         java-version: '18.x'
+        distribution: jdk
     - uses: subosito/flutter-action@v2.4.0
       with:
         channel: 'stable'
