--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -1,38 +1,14 @@
-# This is a basic workflow to help you get started with Actions
+name: Gh-Pages
 
-name: Build, Release app to Github Pages
-# name: Test, Build and Release apk
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v3.2.0
-      with:
-        java-version: '18.x'
-        distribution: jdk
-    - uses: subosito/flutter-action@v2.4.0
-      with:
-        channel: 'stable'
-    - name: 'Run flutter pub get'
-      run: flutter pub get
-#    - name: 'Run Test(s)'
-#      run: flutter test
-    - name: Enable flutter web
-      run: flutter config --enable-web
-    - name: 'Build Web App'
-      run: flutter build web
-    - name: deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.TOKEN }}
-        publish_dir: ./build/web
+      - uses: actions/checkout@v2 # Only works with v2
+      - uses: subosito/flutter-action@v1
+      - uses: erickzanardo/flutter-gh-pages@v6
