--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -26,7 +26,7 @@ jobs:
           git init
           git config user.name "cyenite"
           git config user.email "aaronrono42@github.com"
-          git remote add secure-origin https://username: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@github.com/Template-Generator.git
+          git remote add secure-origin https://username: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@github.com/cyenite/Template-Generator.git
           git checkout -b gh-pages
           git add .
           git commit -m "Deployed Github Pages"
