--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -25,7 +25,7 @@ jobs:
           cd build/web
           git init
           git config user.name "cyenite"
-          git config user.email "aaronrono42@github.com"
+          git config user.email "aaronrono42@gmail.com"
           git remote add secure-origin https://username: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@github.com/cyenite/Template-Generator.git
           git checkout -b gh-pages
           git add .
