--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fluent_ui:
-    git: https://github.com/bdlukaa/fluent_ui.git
+  fluent_ui: 3.11.1
   provider: ^6.0.1
   system_theme: ^1.0.1
   window_manager: ^0.1.9
@@ -34,6 +33,8 @@ dependencies:
   firebase_auth: ^3.3.16
   shared_preferences: ^2.0.13
   get: ^4.6.1
+  google_fonts:
+  mailto: ^2.0.0
 
 dev_dependencies:
   flutter_native_splash: ^1.1.7+1
@@ -47,4 +48,5 @@ flutter_native_splash:
   image: web/assets/flutter_logo.png
 
   assets:
-    - images/
+    - assets/background.png
+    - assets/images/
